# scheduler

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml  deploy.yml
assets/: calendar.js
src/: app.rs  common.rs  components.rs  data.rs  lib.rs  main.rs  middlewares.rs  routes.rs  scraper.rs
src/components/: button.rs  calendar.rs  container.rs  courses.rs  schedules.rs  searchResult.rs  search_result.rs  section_view.rs
src/data/: auth.rs  store.rs
src/routes/: calendar.rs  donate.rs  generate.rs  health.rs  import.rs  login.rs  preview.rs  root.rs  schedule.rs  search.rs  share.rs  term.rs
src/scraper/: main.rs
