[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["default", "tokio"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
maud = { version = "*", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower = { version = "0.4.13", features = ["default"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
